--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Cultural Touchstones</title>
+    <link rel="stylesheet" href="styles/index.css">
     <script src="elm.js"></script>
   </head>
   <body>
