Fix a bug in index.html
Elm was taking control of a text node, not the div node that we wanted to give it. As a result, there was a superfluous div left floating at the bottom of the the HTML.

To fix this problem, we had to change document.body.firstChild to document.body.firstElementChild; the latter skips text nodes.

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 
     <script>
       Elm.Main.init({
-        node: document.body.firstChild,
+        node: document.body.firstElementChild,
       });
     </script>
   </body>
