--- a/client/index.html
+++ b/client/index.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <title>Cultural Touchstones</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/index.css">
-    <script src="elm.js"></script>
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
+    <link rel="alternate icon" type="image/png" href="/assets/favicon.png">
+    <link rel="stylesheet" href="/styles/index.css">
+    <script src="/elm.js"></script>
   </head>
+
   <body>
     <!-- This div will be replaced by the HTML that Elm generates. -->
     <div></div>
-
     <script>
       Elm.Main.init({
         node: document.body.firstElementChild,
